AC_INIT(gnome-pty.h)

AM_INIT_AUTOMAKE(gnome-pty-helper,1.95.0)

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AM_PROG_CC_STDC

AM_MAINTAINER_MODE

PKG_CHECK_MODULES(GLIB,glib-2.0)
AC_CHECK_HEADERS(sys/syslimits.h sys/time.h sys/types.h sys/un.h alloca.h lastlog.h libutil.h paths.h pty.h stropts.h termios.h ttyent.h util.h utmp.h utmpx.h pty.h util.h libutil.h ttyent.h)
AC_CHECK_FUNCS(endutent fcntl forkpty getttyent getutent getutmpx grantpt flock login_tty openpty revoke sendmsg seteuid setreuid setutent strrchr updwtmp updwtmpx utmpname utmpxname)
GPH_CHECK_UTMP

AC_CHECK_HEADERS(stropts.h)
AM_CONFIG_HEADER(config.h)

if test x$ac_cv_func_grantpt = xyes; then
    :
else
	 AC_CHECK_LIB(pt, grantpt)
fi

AC_MSG_CHECKING([for Unix98 sendmsg])
AC_TRY_LINK([
#include <stdio.h>
#include <sys/types.h>
#include <sys/socket.h>
],[
struct msghdr hdr;
hdr.msg_control = NULL;
hdr.msg_controllen = 0;
sendmsg (0, &hdr, 0);
],[
AC_DEFINE(HAVE_SENDMSG)
AC_MSG_RESULT(yes)],[AC_MSG_RESULT(no)])

AC_OUTPUT(Makefile)
