AC_INIT(gnome-pty.h)

AM_INIT_AUTOMAKE(gnome-pty-helper,1.95.0)

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AM_PROG_CC_STDC

AM_MAINTAINER_MODE

PKG_CHECK_MODULES(GLIB,glib-2.0)
AC_CHECK_HEADERS(sys/syslimits.h sys/time.h sys/types.h sys/un.h alloca.h lastlog.h libutil.h paths.h pty.h stropts.h termios.h ttyent.h util.h utmp.h utmpx.h pty.h util.h libutil.h ttyent.h)
have_openpty=0
AC_CHECK_FUNC(openpty,have_openpty=1,[AC_CHECK_LIB(util,openpty,[LIBS="$LIBS -lutil";have_openpty=1])])
if test x$have_openpty = x1 ; then
  AC_DEFINE(HAVE_OPENPTY,1,[Define if you have openpty() in libc or libutil])
fi
AC_CHECK_FUNCS(endutent fcntl forkpty getttyent getutent getutmpx grantpt flock login_tty openpty revoke sendmsg seteuid setreuid setutent strrchr updwtmp updwtmpx utmpname utmpxname)
GPH_CHECK_UTMP

AC_CHECK_HEADERS(stropts.h)
AM_CONFIG_HEADER(config.h)

if test x$ac_cv_func_grantpt = xyes; then
    :
else
	 AC_CHECK_LIB(pt, grantpt)
fi

AC_OUTPUT(Makefile)
